--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,84 @@
-torch
-numpy
-spacy
-nltk
-datasets
-tqdm
-tensorboard
-scikit-learn
-senteval @ git+https://github.com/facebookresearch/SentEval.git
+absl-py==2.2.2
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.17
+aiosignal==1.3.2
+async-timeout==5.0.1
+attrs==25.3.0
+catalogue==2.0.10
+certifi==2025.1.31
+charset-normalizer==3.3.2
+click==8.1.8
+cloudpathlib==0.16.0
+colorama==0.4.6
+confection==0.1.4
+cymem==2.0.6
+datasets==3.5.0
+dill==0.3.8
+filelock==3.17.0
+frozenlist==1.6.0
+fsspec==2024.12.0
+gmpy2==2.2.1
+grpcio==1.71.0
+huggingface-hub==0.30.2
+idna==3.7
+Jinja2==3.1.6
+joblib==1.4.2
+langcodes==3.3.0
+Markdown==3.8
+markdown-it-py==2.2.0
+MarkupSafe==3.0.2
+mdurl==0.1.0
+mkl-service==2.4.0
+mpmath==1.3.0
+multidict==6.4.3
+multiprocess==0.70.16
+murmurhash==1.0.12
+networkx==3.4.2
+nltk==3.9.1
+numpy==1.26.4
+packaging==24.2
+pandas==2.2.3
+pillow==11.1.0
+preshed==3.0.8
+propcache==0.3.1
+protobuf==6.30.2
+pyarrow==19.0.1
+pydantic==2.10.3
+pydantic-core==2.27.1
+Pygments==2.19.1
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+rich==13.9.4
+scikit-learn==1.6.1
+scipy==1.15.2
+senteval @ git+https://github.com/facebookresearch/SentEval.git@5d6dc117d1ac30357ddaeb7347fb5684e9b87015
+shellingham==1.5.0
+six==1.17.0
+smart-open==5.2.1
+spacy==3.7.2
+spacy-legacy==3.0.12
+spacy-loggers==1.0.4
+srsly==2.5.1
+sympy==1.13.3
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
+thinc==8.2.2
+threadpoolctl==3.5.0
+torch==2.5.1
+torchaudio==2.5.1
+torchvision==0.20.1
+tqdm==4.67.1
+triton==3.1.0
+typer==0.9.0
+typing_extensions==4.12.2
+tzdata==2025.2
+urllib3==2.3.0
+wasabi==0.9.1
+weasel==0.3.4
+Werkzeug==3.1.3
+xxhash==3.5.0
+yarl==1.20.0
